Bug 119929 - pdf export dialog window inconsistently uses french locale
Summary: pdf export dialog window inconsistently uses french locale
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
6.1.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-09-17 12:37 UTC by rouelle
Modified: 2018-09-18 13:43 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (71.03 KB, image/png)
2018-09-17 12:50 UTC, rouelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rouelle 2018-09-17 12:37:32 UTC
Description:
In every component of LibreOffice since series 6.1 (> 6.0.x), the pdf window dialog box uses english instead of my french locale. Strangely, after minor corrections to a document, if I reexport again to pdf with the dialog box, my locale french MAY be used in the window and all the different tabs.

Steps to Reproduce:
1. Export a document using pdf dialog window (not direct export)
2. The dialog window and all the tabs and content are in english instead of my french locale
3. If I export again the same document in pdf in the same session, my french locale sometimes appears

Actual Results:
Untranslated dialog window box except 3 words (surrounding buttons at the bottom: Aide _ Annuler _ Export) that uses french locale (stands for Help _ Cancel _ Export).

Expected Results:
Translated in french window dialog box.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.1.1.2
Build ID: 6.1.1-2
Threads CPU : 4; OS : Linux 4.18; UI Render : par défaut; VCL: gtk3; 
Locale : fr-CA (fr_CA.UTF-8); Calc: group threaded

--

I deleted LibreOffice user profile to start from a fresh profile and same happens.
Comment 1 rouelle 2018-09-17 12:50:07 UTC
Created attachment 144941 [details]
screenshot
Comment 2 royerjy 2018-09-17 14:45:57 UTC
With the same version in fr_FR on Linux Mint, it is OK.
Comment 3 rouelle 2018-09-17 14:51:30 UTC
(In reply to royerjy from comment #2)
> With the same version in fr_FR on Linux Mint, it is OK.

I'm having this problem in Arch Linux. Like I said, the problem occurs only on the first opening of the dialog window, as if locale fr_CA is not read. Every subsequent opening is OK and uses my french locale.
Comment 4 Jean-Baptiste Faure 2018-09-17 14:52:22 UTC
Tested with LO 6.1.1 from Ubuntu PPA. Indeed for the first PDF export, the dialog (every tabs) is not translated, but it is translated if I do a second export.

So the problem is not in the translation itself but how the translation is shown by the dialog.

Set as regression because this bug does not appear in LO 6.0.6 from the same PPA.

Best regards. JBF
Comment 5 Xisco Faulí 2018-09-17 14:57:35 UTC
out of curiosity, what do you get if you do echo $XDG_CURRENT_DESKTOP ?
Comment 6 Julien Nabet 2018-09-17 15:00:04 UTC
(In reply to Jean-Baptiste Faure from comment #4)
> ...
> So the problem is not in the translation itself but how the translation is
> shown by the dialog.
Why not but quite weird it works with fr_FR and not fr_CA

Caolán: knowing your work about translation part (gettext) + dialog conversion, thought you may have some ideas here.
Quite difficult to say if it's specific to fr_CA or translation mechanism in general.
Comment 7 rouelle 2018-09-17 15:02:37 UTC
(In reply to Xisco Faulí from comment #5)
> out of curiosity, what do you get if you do echo $XDG_CURRENT_DESKTOP ?

GNOME

and gnome-shell --version gives

GNOME Shell 3.28.3
Comment 8 Philippe Clément 2018-09-17 15:03:38 UTC
Problem reproduced by following your 3 steps :

1. Export a document using pdf dialog window (not direct export)
2. The dialog window and all the tabs and content are in english instead of my french locale
3. If I export again the same document in pdf in the same session, my french locale sometimes appears

Additional Info:
Version: 6.1.1.2
Build ID: 1:6.1.1~rc2-0ubuntu0.18.04.1~lo3
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded

kind regards
Comment 9 rouelle 2018-09-17 15:05:57 UTC
(In reply to Philippe Clément from comment #8)
> Problem reproduced by following your 3 steps :
> 
> 1. Export a document using pdf dialog window (not direct export)
> 2. The dialog window and all the tabs and content are in english instead of
> my french locale
> 3. If I export again the same document in pdf in the same session, my french
> locale sometimes appears
> 
> Additional Info:
> Version: 6.1.1.2
> Build ID: 1:6.1.1~rc2-0ubuntu0.18.04.1~lo3
> Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3; 
> Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
> 
> kind regards

On second export or second call of the export dialog my french locale seems to ALLWAYS work.
Comment 10 Julien Nabet 2018-09-17 15:11:24 UTC
(In reply to Philippe Clément from comment #8)
> Problem reproduced by following your 3 steps :
> ...
> Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
So it's no more specific to a locale.

But with this same locale it works on Linux Mint (see comment 2)

=> Ubuntu + Arch packaging pb?
Comment 11 Julien Nabet 2018-09-17 15:13:04 UTC
Just to be sure, when you say second export in the same "session", do you mean Linux desktop session or LO session?
Comment 12 rouelle 2018-09-17 15:14:56 UTC
(In reply to Julien Nabet from comment #11)
> Just to be sure, when you say second export in the same "session", do you
> mean Linux desktop session or LO session?

LO session. Every time I close LO the problem reappears.
Comment 13 Philippe Clément 2018-09-17 16:12:25 UTC
(In reply to Julien Nabet from comment #11)
> Just to be sure, when you say second export in the same "session", do you
> mean Linux desktop session or LO session?

At each new LibreOffice session the problem reappears.
My environment: Linux Mint 19 "Tara" - Cinnamon (64-bit)
Comment 14 Jean-Baptiste Faure 2018-09-17 20:48:34 UTC
(In reply to Julien Nabet from comment #10)
> (In reply to Philippe Clément from comment #8)
> > Problem reproduced by following your 3 steps :
> > ...
> > Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
> So it's no more specific to a locale.
> 
> But with this same locale it works on Linux Mint (see comment 2)
> 
> => Ubuntu + Arch packaging pb?

I do not think that it is a packaging problem from Ubuntu or Arch because I get the same issue with my own built of LO 6.1.2.0.0+. That said it may be related to some particularity of Ubuntu (in my case) because I build LO under Ubuntu.

Best regards. JBF
Comment 15 Philippe Clément 2018-09-18 06:57:13 UTC
(In reply to rouelle from comment #12)
> (En réponse à Julien Nabet du commentaire # 11 )
>  > Juste pour être sûr, quand vous dites la deuxième exportation dans la
> même "session", est-ce que vous
> > signifie session de bureau Linux ou session LO?
> 
> Session de LO Chaque fois que je ferme LO, le problème réapparaît.

Note : during the same LO session:
    1. start the PDF export procedure (the dialog box is not located)
    2. cancel the export
    3. repeat the export procedure, the dialog box is in French

Sincerely, Philippe
Comment 16 Caolán McNamara 2018-09-18 08:09:34 UTC
I know what the problem is, just a matter of seeing what the right fix is.
Comment 17 Commit Notification 2018-09-18 11:15:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ba6e9d4979b622ce9e270b61ade4bee08c8259d

tdf#119929 ensure .ui translation domain is bound before translation attempt

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Caolán McNamara 2018-09-18 11:34:01 UTC
backport to 6.1 in gerrit
Comment 19 Commit Notification 2018-09-18 12:53:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47ff79610feee88283695fe148b2b03801517e3b&h=libreoffice-6-1

tdf#119929 ensure .ui translation domain is bound before translation attempt

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Jean-Baptiste Faure 2018-09-18 13:43:41 UTC
Verified fixed in LO 6.1.2.0.0+ built at home under Ubuntu 18.04 x86-64.

Thank you very much for the quick fix.

Best regards. JBF