tdf#119929 ensure .ui translation domain is bound before translation attempt

Change-Id: Ib06b399f6c975c1c64594b0a294b10bc6a9f0a69